TDD-L#17, pending later correction, exercise_completed

--- a/app/views/grams/edit.html.erb
+++ b/app/views/grams/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= simple_form_for @gram do |f| %>
   <%= f.input :message %>
-  <%= f.submit %>
+  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
 <% end %>
