--- a/app/views/grams/index.html.erb
+++ b/app/views/grams/index.html.erb
@@ -1,3 +1,10 @@
 <%# trying to perform setup %>
 
-<h1>   GRAMS !!!  You Did It !!!  </h1>
+<h1>  GRAMS !!!  You Did It !!!  </h1>
+
+<% @grams.each do |gram| %>
+<div>
+  <%= gram.message %>
+  <%= image_tag gram.picture %>
+</div>
+<% end %>
