--- a/app/views/grams/edit.html.erb
+++ b/app/views/grams/edit.html.erb
@@ -1,6 +1,13 @@
 <%# resolving Missing template grams/edit %>
 
-<%= simple_form_for @gram do |f| %>
-  <%= f.input :message %>
-  <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
-<% end %>
+
+<div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-3 card form">
+  <h2>Edit Gram</h2>
+
+    <%= simple_form_for @gram do |f| %>
+      <%= f.input :message %>
+      <%= f.input :picture %>
+      <%= f.submit "Update", class: 'btn btn-primary' %>
+    <% end %>
+
+</div>
